--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,6 @@ license = "AFL3.0"
 [tool.poetry.dependencies]
 python = "~3.7"
 conda-lock = "^1.1.1"
-fastapi = "^0.79.0"
 uvicorn = {extras = ["standard"], version = "^0.18.2"}
 bioblend = "^0.18.0"
 pycryptodome = "^3.15.0"
@@ -16,6 +15,7 @@ Mako = "1.1.6"
 FastAPI-Mako = "^0.6.2"
 rpy2 = "3.5.1"
 numpy = "1.21.6"
+fastapi = {extras = ["trio"], version = "^0.79.0"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
