--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ FastAPI-Mako = "^0.6.2"
 rpy2 = "3.5.1"
 numpy = "1.21.6"
 fastapi = {extras = ["trio"], version = "^0.79.0"}
+Flask = "^2.1.3"
+Flask-Mako = "^0.4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
