--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,12 @@ FastAPI-Mako = "^0.6.2"
 rpy2 = "3.5.1"
 numpy = "1.21.6"
 fastapi = {extras = ["trio"], version = "^0.79.0"}
-Flask = "^2.1.3"
+Flask = "1.1.2"
 Flask-Mako = "^0.4"
 gunicorn = "^20.1.0"
 Werkzeug = "2.0.3"
+itsdangerous = "2.0.1"
+Jinja2 = "3.0.3"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
