--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ gunicorn = "^20.1.0"
 Werkzeug = "2.0.3"
 itsdangerous = "2.0.1"
 Jinja2 = "3.0.3"
+humanize = "^4.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
